--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "prosemirror-view": "^1.18.11",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "y-prosemirror": "^1.0.9",
+    "y-webrtc": "^10.2.0",
+    "y-websocket": "^1.3.16",
+    "yjs": "^13.5.11",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
