--- a/package.json
+++ b/package.json
@@ -23,17 +23,26 @@
     "@angular/router": "~12.0.3",
     "@benrbray/prosemirror-math": "^0.2.2",
     "@types/prosemirror-commands": "^1.0.4",
+    "@types/prosemirror-dropcursor": "^1.0.2",
+    "@types/prosemirror-gapcursor": "^1.0.4",
+    "@types/prosemirror-history": "^1.0.3",
     "@types/prosemirror-inputrules": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
+    "@types/prosemirror-menu": "^1.0.4",
     "@types/prosemirror-schema-basic": "^1.0.2",
     "@types/prosemirror-schema-list": "^1.0.3",
     "@types/prosemirror-state": "^1.2.7",
     "document-register-element": "^1.7.2",
     "katex": "^0.13.13",
+    "lit-html": "^1.4.1",
     "prosemirror-commands": "^1.1.10",
+    "prosemirror-dropcursor": "^1.3.5",
     "prosemirror-example-setup": "^1.1.2",
+    "prosemirror-gapcursor": "^1.1.5",
+    "prosemirror-history": "^1.1.3",
     "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
+    "prosemirror-menu": "^1.1.4",
     "prosemirror-model": "^1.14.3",
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-schema-list": "^1.1.5",
