--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "y-prosemirror": "^1.0.9",
+    "y-protocols": "^1.0.5",
     "y-webrtc": "^10.2.0",
     "y-websocket": "^1.3.16",
     "yjs": "^13.5.11",
