--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@benrbray/prosemirror-math": "^0.2.2",
+    "@types/prosemirror-collab": "^1.1.2",
     "@types/prosemirror-commands": "^1.0.4",
     "@types/prosemirror-dropcursor": "^1.0.2",
     "@types/prosemirror-gapcursor": "^1.0.4",
@@ -35,6 +36,7 @@
     "document-register-element": "^1.7.2",
     "katex": "^0.13.13",
     "lit-html": "^1.4.1",
+    "prosemirror-collab": "^1.2.2",
     "prosemirror-commands": "^1.1.10",
     "prosemirror-dropcursor": "^1.3.5",
     "prosemirror-example-setup": "^1.1.2",
